[package]
name = "madcap_fast"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "time", "signal"] }
axum = { version = "0.8", features = ["macros"] }
tower-http = { version = "0.6", features = ["cors", "trace", "set-header"] }
flate2 = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "gzip", "brotli", "rustls-tls", "http2"] }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["raw_value"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
brotli = "7"
bytes = "1"

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "merge_tracks"
harness = false

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
